build/log/idf_py_stdout_output_17908
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D E:\THANHTRA\KI_7\MCU\Project_CK\fan_idf\build\bootloader\esp-idf\esptool_py && C:\Users\ADMIN\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/ADMIN/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/build/bootloader/bootloader.bin"
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
ccache C:\Users\ADMIN\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/build/config -IE:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/freertos/config/riscv/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32c3 -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c3/. -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c3/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/soc/esp32c3 -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/soc/esp32c3/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/soc/esp32c3/register -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/hal/esp32c3/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_rom/esp32c3/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_rom/esp32c3 -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_system/port/include/riscv -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/riscv/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/include/apps -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/port/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mqtt/esp-mqtt/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_event/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/tcp_transport/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp-tls -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp-tls/esp-tls-crypto -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mbedtls/port/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mbedtls/mbedtls/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mbedtls/mbedtls/library -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mbedtls/esp_crt_bundle/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_timer/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/nvs_flash/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_partition/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_netif/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_wifi/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_wifi/include/local -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_phy/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_phy/esp32c3/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_adc/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_adc/interface -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_adc/esp32c3/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/components/esp_adc/deprecated/include -IC:/Users/ADMIN/esp/v5.5.1/esp-idf/examples/common_components/protocol_examples_common/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf=. -fmacro-prefix-map=C:/Users/ADMIN/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c: In function 'mqtt_event_handler':
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c:175:9: error: implicit declaration of function 'esp_mqtt_client_subcribe'; did you mean 'esp_mqtt_client_subscribe'? [-Wimplicit-function-declaration]
  175 |         esp_mqtt_client_subcribe(client, "iot/fan/speed", 0);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~
      |         esp_mqtt_client_subscribe
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c: In function 'gpio_task':
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c:348:9: error: enumeration value 'FAN_MODE_OFF_OSCILLATION' not handled in switch [-Werror=switch]
  348 |         switch(cmd)
      |         ^~~~~~
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c: In function 'gpio_input_config':
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c:378:19: warning: unused variable 'gpio_input' [-Wunused-variable]
  378 |     gpio_config_t gpio_input = {
      |                   ^~~~~~~~~~
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c: In function 'adc_config':
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c:409:9: warning: 'ADC_ATTEN_DB_11' is deprecated [-Wdeprecated-declarations]
  409 |         .atten = ADC_ATTEN_DB_11,
      |         ^
In file included from E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c:23:
C:/Users/ADMIN/esp/v5.5.1/esp-idf/components/hal/include/hal/adc_types.h:51:5: note: declared here
   51 |     ADC_ATTEN_DB_11 __attribute__((deprecated)) = ADC_ATTEN_DB_12,  ///<This is deprecated, it behaves the same as `ADC_ATTEN_DB_12`
      |     ^~~~~~~~~~~~~~~
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c: At top level:
E:/THANHTRA/KI_7/MCU/Project_CK/fan_idf/main/app_main.c:133:13: warning: 'log_error_if_nonzero' defined but not used [-Wunused-function]
  133 | static void log_error_if_nonzero(const char *message, int error_code)
      |             ^~~~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
